--- a/TradeRealTime.ipynb
+++ b/TradeRealTime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import explained_variance_score\n",
     "import plotly.offline as py\n",
-    "\n",
     "import os\n",
     "\n",
     "clear = lambda: os.system('clear')\n",
@@ -352,6 +351,12 @@
     "\n",
     "    #WinMSGLoop()\n",
     "    \n",
+    "def retorna_ultimo_hor():\n",
+    "\n",
+    "    dde = DDEClient(\"profitchart\", \"cot\")\n",
+    "\n",
+    "    return dde.request(\"WINM20.HOR\").decode(\"utf-8\")\n",
+    "    \n",
     "def retorna_ultimo_cot():\n",
     "\n",
     "    dde = DDEClient(\"profitchart\", \"cot\")\n",
@@ -362,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +516,7 @@
        "max    2.731001e+11  133020.000000   1370.000000  118387.500000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -580,45 +585,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-20-71fa93af9dbf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mtempo_candle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;31m# minutos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'cls'\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'nt'\u001b[0m \u001b[1;32melse\u001b[0m \u001b[1;34m'clear'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mdesconhecido\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mretorna_ultimo_cot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de operações:  141\n",
+      "\n",
+      "Quantidade de ganhos:  82\n",
+      "\n",
+      "Quantidade de perdas:  59\n",
+      "\n",
+      "Valor total:  -993.0\n",
+      "\n",
+      "Taxa de acerto (%):  58.156028368794324\n"
      ]
     }
    ],
    "source": [
-    "erro_ordem = -35 # pontos\n",
-    "tempo_candle = 1 # minutos\n",
+    "teste = pd.read_csv('Dados/WINM20_1min.csv')\n",
+    "teste['Variação'] = teste['Fechamento'].sub(teste['Abertura'])\n",
+    "teste['Data'] = pd.to_datetime(teste['Data'], format='%d/%m/%Y',errors='ignore')\n",
+    "teste['Hora'] = pd.to_datetime(teste['Hora']).dt.time\n",
+    "teste = teste.sort_values(by=['Data', 'Hora'])\n",
     "\n",
-    "os.system('cls' if os.name == 'nt' else 'clear')\n",
-    "\n",
-    "desconhecido = retorna_ultimo_cot()\n",
-    "time.sleep(tempo_candle*60)\n",
-    "desconhecido = np.vstack([desconhecido, retorna_ultimo_cot()])\n",
-    "time.sleep(tempo_candle*60)\n",
-    "desconhecido = np.vstack([desconhecido, retorna_ultimo_cot()])\n",
-    "time.sleep(tempo_candle*60)\n",
     "#\n",
     "\n",
+    "banca = 1000 # reais\n",
+    "\n",
+    "erro_ordem = -35 # pontos\n",
+    "\n",
+    "limite_stop = 100 # pontos\n",
+    "limite_gain = -50 # pontos\n",
+    "\n",
+    "qnt_contratos = 1\n",
+    "valor_contrato = 1 # reais\n",
+    "\n",
+    "#\n",
+    "qnt_operacoes = 0\n",
+    "qnt_ganhos = 0\n",
+    "qnt_perdas = 0\n",
+    "ganho = banca\n",
+    "ordem_execucao = False\n",
+    "\n",
+    "for i in range(0, len(teste) - qnt_entrada - qnt_saida):\n",
+    "        x_teste = pd.DataFrame(data=teste[features_entrada][i:qnt_entrada+i].to_numpy()).T\n",
+    "        y_teste = pd.DataFrame(data=teste[features_saida][qnt_entrada+i:qnt_entrada+i+qnt_saida].to_numpy()).T\n",
+    "             \n",
+    "        previsao_teste = model.predict(x_teste)\n",
+    "        \n",
+    "        ordem = previsao_teste + erro_ordem\n",
+    "        stop_ordem = ordem + limite_stop\n",
+    "        gain_ordem = ordem + limite_gain\n",
+    "        if(ganho >= limite_stop/5):    # caso a minha banca não tenha zerado, continua\n",
+    "            if(teste[features_saida][qnt_entrada+i:qnt_entrada+i+qnt_saida].to_numpy().T >= ordem): # se entrar na ordem\n",
+    "                if(ordem_execucao == False):\n",
+    "                    qnt_operacoes = qnt_operacoes + 1\n",
+    "                    ordem_execucao = True\n",
+    "            if(ordem_execucao):\n",
+    "                if(teste[features_saida][qnt_entrada+i:qnt_entrada+i+qnt_saida].to_numpy().T >= stop_ordem): # stop da ordem\n",
+    "                    ganho = ganho - qnt_contratos*limite_stop/5 - valor_contrato*qnt_contratos\n",
+    "                    qnt_perdas = qnt_perdas + 1\n",
+    "                    ordem_execucao = False\n",
+    "                elif(teste['Fechamento'][qnt_entrada+i:qnt_entrada+i+qnt_saida].to_numpy().T <= gain_ordem): # gain da ordem\n",
+    "                    ganho = ganho - qnt_contratos*limite_gain/5 - valor_contrato*qnt_contratos\n",
+    "                    qnt_ganhos = qnt_ganhos + 1\n",
+    "                    ordem_execucao = False\n",
+    "        else:\n",
+    "            break\n",
+    "           \n",
+    "#\n",
+    "\n",
+    "print(\"Total de operações: \", qnt_operacoes)\n",
+    "print()\n",
+    "print(\"Quantidade de ganhos: \", qnt_ganhos)\n",
+    "print()\n",
+    "print(\"Quantidade de perdas: \", qnt_perdas)\n",
+    "print()\n",
+    "print(\"Valor total: \", ganho - banca)\n",
+    "print()\n",
+    "print(\"Taxa de acerto (%): \", 100*qnt_ganhos/qnt_operacoes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrada:\n",
+      "         0        1        2\n",
+      "0  80515.0  80515.0  80515.0\n",
+      "          0         1         2\n",
+      "0  18:01:26  18:01:26  18:01:26\n",
+      "\n",
+      "Valor máximo predito:  [[80638.71744842]]\n",
+      "\n",
+      "Ordem venda:  [[80603.71744842]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "erro_ordem_trade = -35 # pontos\n",
+    "tempo_candle = 1 # minutos\n",
+    "\n",
+    "#\n",
+    "#time.sleep(tempo_candle*60)\n",
+    "print(\".\")\n",
+    "hora = retorna_ultimo_hor()\n",
+    "desconhecido = retorna_ultimo_cot()\n",
+    "time.sleep(tempo_candle*60)\n",
+    "print(\".\")\n",
+    "hora = np.vstack([hora, retorna_ultimo_hor()])\n",
+    "desconhecido = np.vstack([desconhecido, retorna_ultimo_cot()])\n",
+    "time.sleep(tempo_candle*60)\n",
+    "print(\".\")\n",
+    "hora = np.vstack([hora, retorna_ultimo_hor()])\n",
+    "desconhecido = np.vstack([desconhecido, retorna_ultimo_cot()])\n",
+    "#\n",
+    "\n",
+    "x_hora = pd.DataFrame(data=hora[len(hora)-qnt_entrada:len(hora)].T)\n",
     "x_desconhecido = pd.DataFrame(data=desconhecido[len(desconhecido)-qnt_entrada:len(desconhecido)].T)\n",
     "\n",
-    "print(\"Entrada:\", x_desconhecido)\n",
+    "clear() # limpa a tela para atualizar os dados\n",
+    "print(\"Entrada:\")\n",
+    "print(x_hora)\n",
+    "print(x_desconhecido)\n",
     "print()\n",
     "\n",
     "previsao = model.predict(x_desconhecido)\n",
     "\n",
     "print(\"Valor máximo predito: \", previsao)\n",
     "print()\n",
-    "print(\"Ordem venda: \", previsao + erro_ordem)"
+    "print(\"Ordem venda: \", previsao + erro_ordem_trade)\n",
+    "print()"
    ]
   },
   {
